examples/resolver/primitives/fail/return_arity.axo
func id(const v: Integer): Integer {
    return(v, v)
}

print(id(1))
